[add] hover card

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ ul li{
 .jumbotron{
   background-color: #1ABC9C;
   color: white;
+  padding-top: 150px;
 }
 
 .avatar{
@@ -59,12 +60,35 @@ ul li{
 .about-us{
   background-color: #1ABC9C;
   color: white;
+} 
+
+.card-custom{
+  position: relative;
+  overflow: hidden;
+}
+
+.layover {
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(49,188,156, .8);
+  color: white;
+  font-size: 60px;
+  display: none;
+}
+
+.card-custom:hover .layover{
+  display: flex;
 }
 
 .custom-button {
   background-color: transparent;
   color: white;
-  border: 2px solid white;
+  border: 2px solid white; 
 }
 /*******CONTACT***/
 .input-custom {
